After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785806 - Find text with ctrl-f fails in python code
Find text with ctrl-f fails in python code
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
Flatpak Nightly Channel
Other Linux
: Normal major
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-04 11:48 UTC by Guillaume Pasquet
Modified: 2017-08-04 16:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
python-pack: fix wrong indenter triggering keys (893 bytes, patch)
2017-08-04 16:49 UTC, sébastien lafargue
committed Details | Review

Description Guillaume Pasquet 2017-08-04 11:48:25 UTC
When editing python code, one cannot show little text search dialog by pressing ctrl-F. Instead a sort of indentation occurs.

Switching to file to another syntax like PHP or javascript makes the dialog show when pressing ctrl-F.

This also happens with the python3 syntax.
Comment 1 sébastien lafargue 2017-08-04 16:49:06 UTC
Created attachment 356975 [details] [review]
python-pack: fix wrong indenter triggering keys
Comment 2 sébastien lafargue 2017-08-04 16:51:14 UTC
Attachment 356975 [details] pushed as 75943d2 - python-pack: fix wrong indenter triggering keys