python-pack: fix wrong indenter triggering keys

https://bugzilla.gnome.org/show_bug.cgi?id=785806